修改:去掉微博引导sdk 修改StretchableFloatingButton中Handler使用官方Handler.Callback方式 增添: 增加CheckStyle, 目前使用square公司的settings 增加eventbus,circleImageView,RxJava,RxAndroid包 增加CustomCrashHandler工具类，手机crash日志 自定义可伸缩StretchableFloatingButton 增加仿QQ的DrawerLayout + ToolBar + NavigationView实现侧滑功能 待解决bug：自定义控件获取焦点问题（第一次开启app,需点击一下才可以获取焦点，再次点击执行OnClick）。 解决bug：异步加载广告界面当网络不好时获取资源失败或者时间超过3s，此时广告界面OnDestory此时在去设置图片崩溃。 需要调整bug：对于android6.0之后，APN权限问题（目前是在AndroidManifest文件中加入WRITE_APN_SETTINGS）但是该权限显示错误，

--- a/app/src/main/res/layout/title_bar.xml
+++ b/app/src/main/res/layout/title_bar.xml
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar
+<LinearLayout
+    android:id="@+id/ll_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="?attr/colorPrimary"
-    android:id="@+id/toolbar"
-    android:layout_height="?attr/actionBarSize"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+    android:orientation="vertical"
+    tools:context=".activity.HomeActivity"
     >
-</android.support.v7.widget.Toolbar>
+
+  <android.support.v7.widget.Toolbar
+      android:id="@+id/toolbar"
+      android:background="?attr/colorPrimary"
+      android:layout_height="?attr/actionBarSize"
+      android:layout_width="match_parent"
+      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+      app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+      >
+  </android.support.v7.widget.Toolbar>
+
+  <com.example.zy.sagittarius.view.StretchableFloatingButton
+      android:id="@+id/view_stretchable_floating_button"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      >
+  </com.example.zy.sagittarius.view.StretchableFloatingButton>
+
+</LinearLayout>
