--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:layout_weight="1"
-            tools:text="@string/login" />
+            android:text="@string/login" />
 
         <Button
             android:id="@+id/btn_login_clear"
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_weight="1"
-            tools:text="@string/sign_in" />
+            android:text="@string/sign_in" />
     </LinearLayout>
 
     <ProgressBar
