新增： StretchableFloatingButton的属性 可以直接在xml中设置 增加butter knife包可以通过注入的方式绑定控件

--- a/app/src/main/res/layout/title_bar.xml
+++ b/app/src/main/res/layout/title_bar.xml
@@ -6,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
     tools:context=".activity.HomeActivity"
     >
@@ -24,6 +25,12 @@
       android:id="@+id/view_stretchable_floating_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      app:text="@string/app_name"
+      app:speed="60"
+      app:text_color="@color/black"
+      app:text_size="16"
+      app:bac_color="@color/yellow"
+      app:inner_circle_color="@color/black"
       >
   </com.example.zy.sagittarius.view.StretchableFloatingButton>
 
