--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -15,7 +15,7 @@
     >
 
   <ImageView
-      android:id="@+id/imageView"
+      android:id="@+id/img_user_header"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingTop="@dimen/nav_header_vertical_spacing"
@@ -23,18 +23,18 @@
       />
 
   <TextView
+      android:id="@+id/text_user_name"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingTop="@dimen/nav_header_vertical_spacing"
-      android:text="Android Studio"
       android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+      android:textSize="18sp"
       />
 
   <TextView
-      android:id="@+id/textView"
+      android:id="@+id/text_user_description"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="android.studio@android.com"
       />
 
 </LinearLayout>
