--- a/app/src/main/res/layout/title_bar.xml
+++ b/app/src/main/res/layout/title_bar.xml
@@ -1,37 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/ll_content"
+<android.support.design.widget.CoordinatorLayout
+    android:id="@+id/cl_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:background="@color/colorPrimaryDark"
-    android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context=".activity.HomeActivity"
     >
 
-  <android.support.v7.widget.Toolbar
-      android:id="@+id/toolbar"
-      android:background="?attr/colorPrimary"
-      android:layout_height="?attr/actionBarSize"
+  <android.support.design.widget.AppBarLayout
+      android:id="@+id/app_bar"
       android:layout_width="match_parent"
-      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-      app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-      >
-  </android.support.v7.widget.Toolbar>
-
-  <com.example.zy.sagittarius.view.StretchableFloatingButton
-      android:id="@+id/view_stretchable_floating_button"
-      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      app:text="@string/app_name"
-      app:speed="60"
-      app:text_color="@color/black"
-      app:text_size="16"
-      app:bac_color="@color/yellow"
-      app:inner_circle_color="@color/black"
-      >
-  </com.example.zy.sagittarius.view.StretchableFloatingButton>
+      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-</LinearLayout>
+    <android.support.design.widget.CollapsingToolbarLayout
+        android:id="@+id/main_collapsing"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_scrollFlags="scroll|exitUntilCollapsed"
+        android:fitsSystemWindows="true"
+        app:contentScrim="?attr/colorPrimary"
+        app:expandedTitleMarginStart="48dp"
+        app:expandedTitleMarginEnd="64dp"
+        >
+
+      <ImageView
+          android:id="@+id/main_backdrop"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:scaleType="centerCrop"
+          android:fitsSystemWindows="true"
+          android:src="@drawable/th"
+          app:layout_collapseMode="parallax"
+          />
+
+      <android.support.v7.widget.Toolbar
+          android:id="@+id/toolbar"
+          android:background="?attr/colorPrimary"
+          android:layout_height="?attr/actionBarSize"
+          android:layout_width="match_parent"
+          app:layout_collapseMode="pin"
+          app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+          >
+      </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.CollapsingToolbarLayout>
+
+  </android.support.design.widget.AppBarLayout>
+
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+    <com.example.zy.sagittarius.view.StretchableFloatingButton
+        android:id="@+id/view_stretchable_floating_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:text="@string/app_name"
+        app:speed="60"
+        app:text_color="@color/black"
+        app:text_size="16"
+        app:bac_color="@color/yellow"
+        app:inner_circle_color="@color/black"
+        >
+    </com.example.zy.sagittarius.view.StretchableFloatingButton>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rcv_home"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="none">
+    </android.support.v7.widget.RecyclerView>
+
+
+  </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
