调整：所有写法，增加阿里规约插件，做了细节修改

--- a/app/src/main/res/layout/activity_collapsing.xml
+++ b/app/src/main/res/layout/activity_collapsing.xml
@@ -31,6 +31,7 @@
         android:id="@+id/rcv_home_collapsing"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:scrollbars="none">
     </android.support.v7.widget.RecyclerView>
 
