--- a/app/src/main/res/layout/adapter_home.xml
+++ b/app/src/main/res/layout/adapter_home.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/img_stories_images"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:padding="8dp" />
 
     <TextView
